changed MongoDB driver to github.com/globalsign/mgo

--- a/glide.yaml
+++ b/glide.yaml
@@ -1,11 +1,8 @@
 package: gmgo
 import:
-- package: gopkg.in/mgo.v2
-  subpackages:
-  - bson
-- package: gopkg.in/tomb.v2
 - package: github.com/rwynn/gtm
-  version: 8c31a77564748098828132040fdd04cbc9501ac8
+  version: 94610373fed2d99a91309d1ff64636f1c60af128
 - package: github.com/serialx/hashring
 - package: github.com/BurntSushi/toml
   version: v0.3.0
+- package: github.com/globalsign/mgo
